<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_url">http://www.samcoles.co.uk</string>
	<string name="hello">Hello World, AndroidSecureMessageActivity!</string>
	<string name="app_name">Secure Message</string>
	<string name="pass_request">Enter your password:</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="manage_keys">Manage Keys</string>
	<string name="send_encrypted_sms">Send encrypted SMS</string>
	<string name="view_inbox">View Inbox</string>
	<string name="settings">Settings</string>
	<string name="set_pass_first_run">First time run. Please set application password.	</string>
	<string name="new_pass">New password: </string>
	<string name="confirm_password">Confirm password:</string>
	<string name="select_publickey_text">"Browse Receiver's Public Key"</string>
	<string name="browse">Browse...</string>
	<string name="done">Done</string>
	<string name="generate_key_button">Generate New Public/Private Pair</string>
	<string name="curren_pairs">Current Pairs:</string>
	<string name="no_pair">No pair.</string>
	<string name="export_public_key">Export public key</string>
	<string name="export_private_key">Export private key</string>
	<string name="remove">Remove</string>
	<string name="faq">FAQ</string>
	<string name="about_us">About us</string>
	<string name="password_is_not_correctpassword_is_not_correct">Password</string>
	<string name="change_app_password">Change Applicaion Password</string>
	<string name="change_security_question">Change Security Question</string>
	<string name="selected_file">Selected file: </string>
	<string name="selected_key">Selected key: </string>
	<string name="encrypt_text">Encrypt</string>
	<string name="send_sms">Send</string>
	<string name="confirm_new_password">Confirm new password:</string>
	<string name="clear">Clear</string>
	<string name="already_exists">Already exists.</string>
	<string name="pair_already_exists_description">Pair already exists. Try another name.</string>
	<string name="creating_keypair_wait">Generating KeyPair. Please wait...</string>
	<string name="error">ERROR</string>
	<string name="keypair_name">Key pair name</string>
	<string name="enter_keypair_name">Enter name for this key pair:</string>
	<string name="deletion_failed">Deletion failed.</string>
	<string name="item_removed">Item removed.</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="remove_pair_dialog_description">This will remove public and private keys in this pair permanently.Continue?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="clear_text_field_description">Do you want to clear text field?</string>
	<string name="password_is_empty">Password is empty.</string>
	<string name="donation">Donation</string>
	<string name="passwords_do_not_match">Passwords do not match!Try Again.</string>
	<string name="wrong_password">Wrong Password!Try Again.</string>
	<string name="something_went_wrong">Something went wrong!</string>
	<string name="no_such_folder">No such folder!</string>
	<string name="current_password_is_not_correct">Current password is not correct.</string>
	<string name="select_public_key">Select public key</string>
	<string name="cipher_length">Cipher length:</string>
	<string name="invalid_public_key">Error! Invalid public key.</string>
	<string name="export_name">Export name</string>
	<string name="enter_name_for_exported_key">Enter name for exported key:</string>
	<string name="app_motto">Make your conversations secure!</string>
	<string name="forget_password_text">Forgot Your Password? Click Here!</string>
	<string name="welcome_text">Welcome to Secure Message!</string>
	<string name="app_description_text">This app will help you to have completely secure SMS conversatios or send weakly encrypted message just for fun.</string>
	<string name="app_license_description">Secure Message is a GNU GPLv3 licensed application.</string>
	<string name="next">Next</string>
	<string name="set_app_pass">Set Application Password</string>
	<string name="app_pass_description">You must enter this password every time you run secure message.</string>
	<string name="start_app">Start Application</string>
	<string name="set_app_prefs">Set Application Preferences</string>
	<string name="set_security_question">Set Security Question</string>
	<string name="security_question_description">In case of forgetting your password, you must answer this question in order to reset your password.</string>
	<string name="application_password">Application Password</string>
	<string name="select_app_mode">Select application mode</string>
	<string name="app_mode">Application Mode</string>
	<string name="advanced_mode_description">Encrypt your messages using RSA assymetric algorithm. You must have receiver\'s Public Key to encrypt data.</string>
	<string name="simple_mode_description">Warning: Messages sent using this mode can be break easily. Don\'t use this mode for critical data.</string>
	<string name="advanced_mode">Advanced Mode</string>
	<string name="simple_mode">Simple Mode</string>
	<string name="app_password">Application Password</string>
	<string name="receiver_field_hint">To</string>
	<string name="to">To</string>
	<string name="enter_your_text">Enter your text...</string>
	<string name="security_question">Security Question</string>
	<string name="security_answer">Security Answer</string>
	<string name="enter_sec_q">Provide Security Question</string>
	<string name="enter_sec_a">Provide Security Answer</string>
	<string name="new_security_question">New Security Question:</string>
	<string name="password_is_not_correct">Password is not correct</string>
	<string name="password">Password</string>
	<string name="password_recovery">Password Recovery</string>
	<string name="password_successfully_updated">Password Successfully Updated.</string>
	<string name="decrypt">decrypt</string>
	<string name="set_app_password">Set App Password!</string>
	<string name="set_app_mode">Set App Mode!</string>
	<string name="exported_to">"Exported to "</string>
	<string name="warning">Warning!</string>
	<string name="private_key_export_warning">Be aware that this key can decrypt encrypted messages with public pair and exporting makes it avaiable to other applications.</string>
	<string name="failure">FAILURE</string>
	<string name="invalid_key">Invalid Key!</string>
	<string name="security_answer_is_incorrect">Security Answer is incorrect!</string>
	<string name="fill_text_field">Fill text field</string>
	<string name="change">Change Key</string>
	<string name="home">Home</string>
	<string name="conversations">Conversations</string>
	</resources>
