<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:holo="http://schemas.android.com/apk/res-auto" >
	
	<PreferenceCategory
		holo:title="@string/app_password"
		holo:key="app_password_category">
		<Preference
			holo:key="change_app_password"
			holo:title="@string/change_app_password"
			holo:summary="@string/app_pass_description">

			<intent holo:action="ir.secure_msg.preferences.ChangeAppPasswordDialog" />

		</Preference>
	</PreferenceCategory>
	
 
	<PreferenceCategory
        holo:title="@string/security_question"
        holo:key="security_question_category"
        >
        <Preference
            holo:key="change_security_question"
            holo:title="@string/change_security_question"
            holo:summary="@string/security_question_description"
            >
            <intent holo:action="ir.secure_msg.preferences.ChangeSecurityQuestionDialog" />
        </Preference>	
    </PreferenceCategory>
    
	<PreferenceCategory
        holo:key="app_mode_category"
        holo:title="@string/app_mode" >
        <Preference
            holo:key="app_mode"
            holo:summary="@string/select_app_mode"
            holo:title="@string/app_mode" >
            <intent holo:action="ir.secure_msg.firstrun.AppModeDialog" />
        </Preference>	
    </PreferenceCategory>
    

</PreferenceScreen>
