<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#C2C2C2"
/>
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mode_radio_group">

                <RadioButton
                    android:id="@+id/simple_mode_radiob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_mode"
                    />

                <TextView
                    android:id="@+id/simple_mode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:text="@string/simple_mode_description"
                    android:textColor="#FC1717"
                    />

                <RadioButton
                    android:id="@+id/advanced_mode_radiob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_mode"
                    android:layout_marginTop="5sp"
                    />

                <TextView
                    android:id="@+id/advanced_mode_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginBottom="5sp"
                    android:text="@string/advanced_mode_description"
                    />
	</RadioGroup>
	
    <Button
                    android:id="@+id/app_mode_done"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"/>
    
</LinearLayout>	