<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center">
	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_gravity="center"
		android:id="@+id/password_request"
		android:text="@string/pass_request"></TextView>
	<EditText
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:inputType="textPassword"
		android:id="@+id/pass_field">
	</EditText>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/buttons_layout"
		android:gravity="center">
		<Button
			android:id="@+id/pass_send"
			android:layout_height="wrap_content"
			android:text="@string/ok"
			android:layout_weight="1"
			android:layout_width="0dp"></Button>
		<Button
			android:layout_height="wrap_content"
			android:id="@+id/pass_cancel"
			android:text="@string/cancel"
			android:layout_weight="1"
			android:layout_width="0dp"></Button>
	</LinearLayout>

	<TextView
	    android:id="@+id/forget_password_textview"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/forget_password_text"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/wrong_password"
		android:text=""
		android:textColor="#FF0000"></TextView>

</LinearLayout>
