<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:minWidth="250sp"
    >

    <TextView
        android:id="@+id/pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" >
    </TextView>

    <EditText
        android:id="@+id/pass_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
        <requestFocus>
        </requestFocus>
    </EditText>

    <TextView
        android:id="@+id/new_sec_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_security_question" >
    </TextView>

    <EditText
        android:id="@+id/new_sec_question_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/new_sec_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_answer" >
    </TextView>

    <EditText
        android:id="@+id/new_sec_answer_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

     <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#FF0000" >
    </TextView>
    
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/chng_sec_question_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            >
        </Button>

        <Button
            android:id="@+id/chng_sec_question_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            >
        </Button>
    </LinearLayout>

</LinearLayout>