<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:minWidth="250sp"
     >

    <TextView
        android:id="@+id/new_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pass" >
    </TextView>

    <EditText
        android:id="@+id/new_pass_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/retype_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password" >
    </TextView>

    <EditText
        android:id="@+id/retype_pass_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" >
    </EditText>

     <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#FF0000" >
    </TextView>
    
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/set_pass_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            />

        <Button
            android:id="@+id/set_pass_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        
    </LinearLayout>

</LinearLayout>