<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:minWidth="250sp"
     >

    <TextView
        android:id="@+id/sec_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_question" >
    </TextView>

    <EditText
        android:id="@+id/sec_question_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        >
    </EditText>

    <TextView
        android:id="@+id/sec_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_answer" >
    </TextView>

    <EditText
        android:id="@+id/sec_answer_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

     <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#FF0000" >
    </TextView>
    
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/set_secq_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            />

        <Button
            android:id="@+id/set_secq_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        
    </LinearLayout>

</LinearLayout>