<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <MultiAutoCompleteTextView
        android:id="@+id/sms_receiver_autocomplete_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:layout_marginTop="6dip"
        android:textColor="#000000"
        android:lines="1"
        >        
        
        <requestFocus >
        </requestFocus>
        
       </MultiAutoCompleteTextView>

    <Button
        android:id="@+id/browse_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sms_receiver_autocomplete_textview"
        android:background="@drawable/buttons_layout"
         >
    </Button>

    <TextView
        android:id="@+id/selected_file_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_button"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#FF0000" >
    </TextView>

    <EditText
        android:id="@+id/plain_text_field"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@id/selected_file_text"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/enter_your_text_"
        android:background="@drawable/text_edit_background"
        >
        <!-- android:background="@drawable/text_edit_background" -->

    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/selected_file_text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/clear_encrypted_text_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            >
        </Button>

        <Button
            android:id="@+id/encrypt_text_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/encrypt_text"
            >
        </Button>

        <Button
            android:id="@+id/send_sms_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_sms"
            >
        </Button>
    </LinearLayout>

</RelativeLayout>