<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TableLayout
		android:layout_width="fill_parent"
		android:id="@+id/tableLayout1"
		android:stretchColumns="0,1"
		android:layout_height="wrap_content"
		android:layout_weight="1">
		<TableRow
			android:layout_width="fill_parent"
			android:id="@+id/tableRow1"
			android:paddingTop="50dp"
			android:layout_weight="1"
			android:layout_height="0dp">
			<LinearLayout
				android:id="@+id/sen_sms_layout"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_span="0">
				<ImageButton
					android:layout_gravity="center"
					android:background="@null"
					android:src="@drawable/send_msg"
					android:layout_width="wrap_content"
					android:id="@+id/send_sms_button"
					android:layout_height="wrap_content"></ImageButton>
				<TextView
					android:text="@string/send_encrypted_sms"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:id="@+id/send_sms_text"
					android:layout_width="wrap_content"
					android:gravity="center"></TextView>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/view_inbox_layout"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_span="1">
				<ImageButton
					android:background="@null"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:layout_gravity="center"
					android:src="@drawable/view_inbox"
					android:id="@+id/view_inbox_button"></ImageButton>
				<TextView
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_width="wrap_content"
					android:layout_gravity="center"
					android:id="@+id/view_inbox_text"
					android:text="@string/view_inbox"></TextView>
			</LinearLayout>
		</TableRow>
		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="fill_parent"
			android:layout_marginTop="50dp"
			android:layout_weight="1"
			android:layout_height="0dp">
			<LinearLayout
				android:id="@+id/settings_layout"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_span="1"
				android:layout_weight="1"
				android:layout_width="0dp">
				<ImageButton
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:src="@drawable/settings"
					android:id="@+id/settings_button"
					android:background="@null"
					android:layout_gravity="center"></ImageButton>
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:id="@+id/settings_text"
					android:layout_gravity="center"
					android:text="@string/settings"></TextView>
			</LinearLayout>
			<LinearLayout
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_span="0"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:id="@+id/home_gen_keys_layout">
				
			</LinearLayout>
		</TableRow>
	</TableLayout>
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/donation_button"
		android:text="@string/donation"
		android:textStyle="bold"
		></Button>

</LinearLayout>
